--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -1806,7 +1806,8 @@
     "with tf.Session() as sess:\n",
     "    saver.restore(sess, save_file)\n",
     "    test_loss,test_accuracy = sess.run([loss_operation, accuracy_operation], feed_dict={x: X_testimage, y:y_testimage,keep_prob: [1,1,1]})\n",
-    "print('Test Accuracy on the test images is: {}'.format(test_accuracy*100),'%')"
+    "print('Test Accuracy on the test images is: {}'.format(test_accuracy*100),'%')\n",
+    "print('Thanks')"
    ]
   },
   {
